# gsl_rust

./: .gitmodules  Cargo.toml  README.md  bindings.rs  build.rs  wrapper.h
benches/: my_benchmark.rs
src/: bspline.rs  data.rs  error.rs  fft.rs  filter.rs  integration.rs  interpolation.rs  lib.rs  linear_fit.rs  minimizer.rs  nonlinear_fit.rs  sorting.rs  special.rs  stats.rs
