[package]
authors = ["Pim van den Berg"]
edition = "2021"
license-file = "LICENSE"
name = "gsl_rust"
version = "0.6.1"

[dependencies]
drop_guard = "0.3.0"
num-complex = "0.4.0"
num-traits = "0.2.14"

[dev-dependencies]
approx = "0.5"
criterion = {version = "0.3", features = ["html_reports"]}
fastrand = "1.6"

[build-dependencies]
bindgen = "0.59.2"
cmake = "0.1"

[[bench]]
harness = false
name = "my_benchmark"
